sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: too many arguments for method getNombreValeurs: ()Int
getNombreValeurs(a):Int
                ^AlgBubbleSort1:4: error: not found: value a
for (i<-0 to a-1){
             ^